# babrou_support

./: .black  .coverage  .env  .env-tests  .flake8  .isort.cfg  .pre-commit-config.yaml  Dockerfile  README.MD  alembic.ini  docker-compose-tests.yml  docker-compose.yaml  pre-commit  pyproject.toml  pytest.ini
.github/workflows/: cd.yaml  ci.yaml
app/: cahce.py  config.py  db.py  logger.py  main.py
app/crud/: __init__.py  base.py  order.py  order_product.py  product.py  report.py
app/midlewares/: __init__.py  db.py  exception.py
app/models/: __init__.py  orders.py  orders_products.py  products.py
app/routers/: __init__.py  base.py  order.py  order_product.py  product.py  report.py
app/schemas/: __init__.py  base.py  order.py  order_product.py  product.py  report.py
migrations/: env.py
migrations/versions/: 2025_02_14_1619-18a499df26d0_db_init.py
poetry-commerce/: pyproject.toml
tests/: conftest.py  functions.py  test_db.py
tests/api/: main.py  test_product_api.py
tests/crud/: main.py
tests/fixtures/: __init__.py  start_db.py
