[project]
name = "poetry-commerce"
version = "0.1.0"
description = ""
authors = [
    {name = "Pavel Bobrov",email = "wraithfinnik@gmial.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "python-dotenv (>=1.0.1,<2.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pytest-cov (>=6.0.0,<7.0.0)",
    "pytest-asyncio (>=0.25.3,<0.26.0)",
    "pydantic-settings (>=2.7.1,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.1.1,<8.0.0)",
    "isort (>=6.0.0,<7.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "fastapi-cache2 (>=0.2.2,<0.3.0)",
    "setuptools (>=75.8.0,<76.0.0)",
    "redis (>=5.2.1,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.25.3"

